--- a/assets/css/record.css
+++ b/assets/css/record.css
@@ -464,7 +464,8 @@ audio {
   padding-top: 8px;
 }
 .ambient-noise svg {
-  vertical-align: top;
+  vertical-align: text-bottom;
+  margin-right: 5px;
 }
 
 #report_btn {
