| Priyanshu | change first two paragraphs of about us page

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -23,10 +23,10 @@
                         <%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>
                     </h1>
                     <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                        <%= __('India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.') %>
+                        <%- __('India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href="https://sunbird.org/projects/vakyansh">sunbird.org</a> along with various other open source frameworks.') %>
                     </p>
                     <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify my-5">
-                        <%= __('This open data can be used by all language enthusiasts and technologists to develop world class speech recognition applications. ') %>
+                        <%= __('Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.') %>
                     </p><br><br>
                 </div>
                 <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="/img/home.svg" class="img-fluid mr-n1"></div>
