--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom bg-light pt-3 border-top mt-lg-2 w-100">
+<footer class="fixed-bottom bg-light pt-3 border-top w-100">
     <div class="container-fluid">
         <div class="d-flex flex-column-reverse flex-lg-row justify-content-lg-around align-items-sm-center align-items-md-center text-center">
             <div class="d-none">
@@ -20,7 +20,7 @@
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
-                <div class="py-2 px-16 d-none">
+                <div class="py-2 px-16">
                     <a href="/feedback">
                         <%= __('Feedback') %>
                     </a>
