| Priyanshu | replace contribution to voluntary contribution on home page and T&C page

--- a/views/modals/say-listen-language.ejs
+++ b/views/modals/say-listen-language.ejs
@@ -5,7 +5,7 @@
                 <button class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times</span>
                 </button>
             </div>
-            <div class="modal-header d-block border-0"><h6 class="modal-title text-center text-muted"><%= __('Select the language for contribution') %>
+            <div class="modal-header d-block border-0"><h6 class="modal-title text-center text-muted"><%= __('Select the language for voluntary contribution') %>
                     :</h6>
 
             </div>
