--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -50,14 +50,14 @@
                     <b>1. Access and Use</b><br><br>
                     <ol type="a">
                         <li>Users can contribute Voice Recordings on the Website.</li>
-                        <li>Anyone over the age of 18 can contribute to the Website. If you are below 18 years, you must have your parent or guardian’s consent and they must supervise your contribution to the Website.</li>
+                        <li>Anyone over the age of 18 can contribute to the Website. If you are below 18 years, you must have your parent or guardian’s consent and they must supervise your voluntary contribution to the Website.</li>
                         <li>As a User you represent and warrant that you are of legal age and are legally competent to form a binding contract (or if not, you've received your parent's or guardian's permission to use the Website and they have agreed to these Terms on your behalf).</li>
                         <li>As a User, you agree to adhere to these Terms when you access, use or contribute Voice Recordings on the Website. As a User, you will be responsible for all your actions and activities in relation to your usage of the Website.</li>
                         <li>Your access and use of the Website may possibly be disrupted due to technical or operational difficulties, without prior notice of downtime.</li>
                     </ol><br><br>
-                    <b>2. Contribution of Voice Recordings</b>
+                    <b>2. Voluntary contribution of Voice Recordings</b>
                     <ol type="a">
-                        <li>Users shall contribute Voice Recordings on this Website and accept the terms of contribution in the Creative Commons for the use of their Voice Recordings without restrictions of any manner.</li>
+                        <li>Users shall contribute Voice Recordings on this Website and accept the terms of voluntary contribution in the Creative Commons for the use of their Voice Recordings without restrictions of any manner.</li>
                         <li>Users shall ensure that Voice Recordings only contain the User reading out the text prompt displayed to them on the screen.</li>
                         <li>Users shall not contribute Voice Recordings that:
                             <ol type="i">
