--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
                 <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
                     <nav class="navbar navbar-expand-lg navbar-light bg-white px-4">
                         <div class="mx-2">
-                            <%= __('Select the language for contribution') %>:
+                            <%= __('Select the language for voluntary contribution') %>:
                         </div><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedLanguage">
                             <div class="col-5 col-lg-5 col-xl-4" id="nav-bar-loader">
