| Priyanshu | added two more links in T&C

--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -54,8 +54,8 @@
             <div id="feedback_thank_you_screen" class="d-none">
                 <div class="row">
                     <div class="col-sm-6 offset-sm-3 d-flex flex-column align-items-center text-center">
-                        <h2 class="font-wt-900"><%= __('Thank You for your valueable feedback')%></h2>
-                        <p class="p-5"><%= __('Your feedback helps us keep the initiative relevant, we appreciate you taking time to leave the feedback.')%></p>
+                        <h2 class="font-wt-900"><%= __('Thank You for your valuable feedback')%></h2>
+                        <p class="p-5"><%= __('Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback')%></p>
                         <a role="button" href="/" class="btn btn-outline-primary d-flex justify-content-center align-items-center mt-3" id="back_to_home_btn"><%= __('Back to Home')%></a>
                     </div>
                 </div>
