--- a/views/modals/report-modal.ejs
+++ b/views/modals/report-modal.ejs
@@ -86,7 +86,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="text-center"><%= __('Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.') %></div>
+                <div class="text-center"><%= __('Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.') %></div>
             </div>
         </div>
     </div>
