--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -145,6 +145,16 @@
                                 https://github.com/facebookresearch/LASER/tree/master/tasks/WikiMatrix
                             </a>
                         </li>
+                        <li>
+                            <a href="https://www.sahapedia.org/" target="_blank" rel="noopener noreferrer">
+                                https://www.sahapedia.org
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://ai4bharat.org/" target="_blank" rel="noopener noreferrer">
+                                https://ai4bharat.org
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
