--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -20,16 +20,16 @@
             <div class="row justify-content-center bg-primary">
                 <div class="col-12 col-sm-10 col-md-8 px-1 py-0 text-light text-center mt-0 mt-sm-2 mt-lg-3">
                     <h1 class="display-5 font-wt-900">
-                        <%= __('Terms and Conditions') %>
+                        Terms and Conditions
                     </h1>
                 </div>
             </div>
             <div class="row justify-content-center align-items-center bg-primary pt-2" id="nav-row"><a id="nav-terms-of-use" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
-                    <%= __('Terms of Use') %>
+                    Terms of Use
                 </a><a id="nav-privacy-policy" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
-                    <%= __('Privacy Policy') %>
+                    Privacy Policy
                 </a><a id="nav-copyright" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
-                    <%= __('Copyright & Licensing Notice') %>
+                    Copyright & Licensing Notice
                 </a></div>
         </div>
         <div class="container-fluid p-5">
