--- a/views/record.ejs
+++ b/views/record.ejs
@@ -57,7 +57,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2">
+                <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                     <div class="col-lg-5 col-md-10 px-0 mb-2 mb-lg-0">
                         <div class="row justify-content-center">
                             <div class="col-lg-5 col-7 col-md-5 col-sm-5 mb-2 mb-lg-0">
@@ -108,6 +108,11 @@
                             </div>
                             <div class="col-lg-7 col-10 col-md-7 col-sm-8 d-flex align-items-center">
                                 <canvas class="w-100 test-canvas" id="speaker-canvas" style="background-color:#fff"></canvas>
+                            </div>
+                        </div>
+                        <div class="row noise-container only-display">
+                            <div class="offset-lg-5 offset-md-5 col-lg-7 col-12 col-md-7 ambient-noise invisible"> 
+                                <%= __('Please speak clearly') %>                              
                             </div>
                         </div>
                     </div>
