--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -28,7 +28,7 @@
                     <div class="mb-4 row col-12 col-sm-8 offset-sm-2 no_xs_margin">
                         <label for="feedback_subject" class="col-12 col-sm-2 col-form-label"><%= __('Subject')%></label>
                         <div class="col-12 col-sm-10">
-                            <input type="text" class="form-control" id="feedback_subject" placeholder="<%= __('Subject')%>">
+                            <input maxlength="128" type="text" class="form-control" id="feedback_subject" placeholder="<%= __('Subject')%>">
                         </div>
                     </div>
                 </div>
