--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -26,3 +26,51 @@ h6,
   border-radius: 4px;
   padding: 6px 12px;
 }
+
+.report-btn-container button{
+  border: 1px solid #959595;
+  color: #959595;
+  margin-right: 1rem;
+  min-width: 107px;
+}
+
+#report_btn svg {
+  margin-right: 5px;
+  margin-top: -2px;
+}
+
+#report_close_btn, #report_sentence_thanks_close_id {
+  position: absolute;
+  right: 1rem;
+  top: 0rem;
+  font-size: 2.5rem;
+  padding: 0;
+}
+
+.other-reason {
+  resize: none;
+  border-radius: 8px;
+  background: #F2F3F5;
+  border: 1px solid #F2F3F5;
+}
+
+.option-text {
+  padding-left: 1.25rem;
+  font-size: 14px;
+}
+
+.fs-14 {
+  font-size: 14px;
+}
+
+@media screen and (max-width: 767px) {
+  #report_btn {
+    margin-right: 0;
+    margin-left: 1rem;
+  }
+  .report-btn-container {
+    margin-top: 1rem;
+    margin-right: .5rem;
+    margin-bottom: 1rem;
+  }
+}
