Navigation/localisation fixes

--- a/views/modals/content-languages.ejs
+++ b/views/modals/content-languages.ejs
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <div class="row justify-content-center d-flex flex-row-wrap text-primary cursor-pointer">
                     <% LANGUAGES.forEach(e=>{ %>
-                        <a id="<%= e.value %>" class="p-2" href="#" locale="<%= e.id %>"><%= e.value %></a>
+                        <a id="<%= e.value %>" class="p-2" href="#" locale="<%= e.id %>"><%= e.text %></a>
                     <% }) %>
                 </div>
             </div>
