Remove extra character

--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/common.css">
 </head>
 
-<body>g
+<body>
     <%- include common/headerForContributor.ejs %>
         <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
             <div id="feedback_form">
