--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
     <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://vakyansh-json-data.s3.ap-south-1.amazonaws.com/bootstrap-tourist.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
@@ -21,7 +22,7 @@
         <div class="container-fluid supreme-container">
             <div class="row">
                 <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white px-4">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-white px-4" id="contribution_lang_navbar">
                         <div class="mx-2">
                             <%= __('Select the language for voluntary contribution') %>:
                         </div><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -234,6 +235,7 @@
                             <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
                             <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
                             <script src="https://www.amcharts.com/lib/version/4.9.23/maps.js"></script>
+                            <script src="https://vakyansh-json-data.s3.ap-south-1.amazonaws.com/bootstrap-tourist.js"></script>
                             <% } %>
 </body>
 
