| Priyanshu | added missing translation for assamese

--- a/views/record.ejs
+++ b/views/record.ejs
@@ -173,7 +173,7 @@
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('RE-RECORD') %> </button>
                 </div>
                 <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
-                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="Please validate any error message before proceeding">
+                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
                         <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded p-3 point-none"> <%= __('NEXT') %> </button>
                     </div>
                 </div>
