--- a/views/modals/speakerDetail.ejs
+++ b/views/modals/speakerDetail.ejs
@@ -97,7 +97,7 @@
                     </label>
                 </div>
                 <div class="row justify-content-center mt-3">
-                    <div class="col-12"><button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3" data-toggle="modal" data-target="#languageModal">
+                    <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>"><button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3" data-toggle="modal" data-target="#languageModal">
                             <%= __('LET\'S GO') %>
                         </button></div>
                 </div>
