--- a/assets/css/thank-you.css
+++ b/assets/css/thank-you.css
@@ -5,208 +5,9 @@
 .thank-you-title {
   width: 85%;
   margin: 0 auto;
+  text-align: center;
 }
 
-#graphcontainer {
-  font-size: 0.2rem;
-  position: relative;
-  height: 44em;
-  width: 9em;
-  overflow: hidden;
-}
-@media (min-width: 672px) {
-  #graphcontainer {
-    font-size: 0.3rem;
-  }
-}
-@media (min-width: 992px) {
-  #graphcontainer {
-    font-size: 0.4rem;
-  }
-}
-
-#total-progress {
-  width: 0%;
-  height: 12.68%;
-  top: 48%;
-  left: calc(15px + 3.7%);
-  transition: width 1s linear;
-}
-#total-progress-bulb {
-  width: 11%;
-  height: 45.5%;
-  top: 30%;
-  left: 75.56%;
-}
-
-/* 3d time graph css starts */
-/* left bottom patch */
-#graphcontainer:before {
-  content: "";
-  position: absolute;
-  z-index: 12;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 1.25em 1.25em 0;
-  border-color: transparent transparent #fff transparent;
-}
-
-/** BACK CASING **/
-/* Back panel */
-#graphbackground {
-  width: 6.5em;
-  height: 43.25em;
-  position: absolute;
-  bottom: 0em;
-  left: 0;
-  background-color: rgba(0, 123, 255, 0.2);
-
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-}
-
-#graphbackground:before,
-#graphbackground:after {
-  content: "";
-  position: absolute;
-}
-
-/* Bottom panel */
-#graphbackground:before {
-  bottom: -0.025em;
-  left: 0.625em;
-  width: 6.55em;
-  height: 1.225em;
-  background-color: rgba(0, 123, 255, 0.1);
-
-  -webkit-transform: skew(45deg);
-  -moz-transform: skew(45deg);
-  -o-transform: skew(45deg);
-  -ms-transform: skew(45deg);
-  transform: skew(45deg);
-}
-
-/* Right back panel */
-#graphbackground:after {
-  top: 21.6em;
-  right: -22.125em;
-  width: 43em;
-  height: 1.225em;
-  background-color: rgba(0, 123, 255, 0.27);
-
-  -webkit-transform: rotate(90deg) skew(-45deg);
-  -moz-transform: rotate(90deg) skew(-45deg);
-  -o-transform: rotate(90deg) skew(-45deg);
-  -ms-transform: rotate(90deg) skew(-45deg);
-  transform: rotate(90deg) skew(-45deg);
-}
-
-/** FRONT CASING **/
-/* Front panel */
-#graphforeground {
-  z-index: 3;
-  position: absolute;
-  width: 6.5em;
-  height: 42em;
-  bottom: 0em;
-  left: 1.225em;
-  background-color: rgba(0, 123, 255, 0.1);
-
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-}
-
-#graphforeground:before,
-#graphforeground:after {
-  content: "";
-  position: absolute;
-}
-
-/* Left panel */
-#graphforeground:before {
-  bottom: 21em;
-  right: -14em;
-  width: 42em;
-  height: 1.25em;
-  background-color: rgba(0, 123, 255, 0.27);
-
-  -webkit-transform: rotate(90deg) skew(-45deg);
-  -moz-transform: rotate(90deg) skew(-45deg);
-  -o-transform: rotate(90deg) skew(-45deg);
-  -ms-transform: rotate(90deg) skew(-45deg);
-  transform: rotate(90deg) skew(-45deg);
-  overflow: hidden;
-}
-
-/* Top panel */
-#graphforeground:after {
-  top: -1.225em;
-  right: 0.6em;
-  width: 6.55em;
-  height: 1.225em;
-  background-color: rgba(0, 123, 255, 0.2);
-
-  -webkit-transform: skew(45deg);
-  -moz-transform: skew(45deg);
-  -o-transform: skew(45deg);
-  -ms-transform: skew(45deg);
-  transform: skew(45deg);
-}
-
-/** BAR GRAPH **/
-#graphbar {
-  -webkit-transition: height 1s linear;
-  -moz-transition: height 1s linear;
-  -o-transition: height 1s linear;
-  -ms-transition: height 1s linear;
-  transition: height 1s linear;
-  z-index: 2;
-  position: absolute;
-  width: 7.75em;
-  height: 0em;
-  bottom: 0em; /* default bar state */
-  left: 0;
-  background-color: rgba(0, 123, 255);
-}
-
-#graphbar:before,
-#graphbar:after {
-  content: "";
-  position: absolute;
-}
-
-/* top shadow */
-#graphbar:before {
-  top: -1.225em;
-  left: 0.625em;
-  width: 6.55em;
-  height: 1.225em;
-  background-color: rgba(0, 123, 255, 0.27);
-
-  -webkit-transform: skew(45deg);
-  -moz-transform: skew(45deg);
-  -o-transform: skew(45deg);
-  -ms-transform: skew(45deg);
-  transform: skew(45deg);
-}
-
-/* top fill */
-#graphbar:after {
-  top: -1.25em;
-  left: 0;
-  border-bottom: 1.25em solid rgba(0, 123, 255);
-  border-left: 0 solid transparent;
-  border-right: 1.275em solid transparent;
-}
 .spinner {
   width: 3rem;
   height: 3rem;
@@ -223,14 +24,25 @@
     transform: rotate(360deg);
   }
 }
-
 .contribuion-info,
 .stats-container {
   border-radius: 34px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.champion-ribbon {
+.champion-ribbon{
+  position: absolute;
+  transform: rotate(-45deg);
+  top: 40px;
+  left: -56px;
+  width: 240px;
+  background: linear-gradient(49.38deg, #007bff -227.24%, #89d6e3 169.12%);
+  padding: 1rem;
+  font-size: 14px;
+  color: #fff;
+}
+
+.spree-ribbon{
   position: absolute;
   transform: rotate(-45deg);
   top: 40px;
@@ -261,10 +73,18 @@
   background-color: #83e661;
 }
 
+.msg-box{
+  text-align: left;
+}
+
 @media screen and (max-width: 599px) {
   .contribuion-info,
   .stats-container {
     margin: 8px;
+  }
+
+  .msg-box{
+    text-align: center;
   }
 
   .stats-container > div {
@@ -303,6 +123,16 @@
 
   .champion-ribbon {
     left: -70px;
+  }
+
+  .spree-ribbon{
+    left: -5px;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .spree-ribbon{
+    left: -5px;
   }
 }
 
